# r2d2-oracle

./: .travis.yml  CHANGELOG.md  Cargo.lock.rust-msrv  Cargo.toml  README.md  release.toml
.github/workflows/: CI.yml
src/: lib.rs
