[package]
name = "r2d2-oracle"
version = "0.5.0"
authors = ["Ralph Ursprung <ralph.ursprung@gmail.com>"]
edition = "2018"
rust-version = "1.54"

description = "Oracle support for the r2d2 connection pool"
repository = "https://github.com/rursprung/r2d2-oracle"
keywords = ["oracle", "sql", "pool", "database", "r2d2"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
chrono=["oracle/chrono"]

[dependencies]
r2d2 = "0.8"
oracle = "0.5.1"
