[package]
name = "r2d2-oracle"
version = "0.5.0"
authors = ["Ralph Ursprung <ralph.ursprung@gmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "Oracle support for the r2d2 connection pool"
repository = "https://github.com/rursprung/r2d2-oracle"
categories = ["database"]
keywords = ["oracle", "sql", "pool", "r2d2"]
license = "MIT OR Apache-2.0"

[features]
chrono=["oracle/chrono"]

[dependencies]
r2d2 = "0.8"
oracle = "0.5.1"
